--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ within the local region capturing electronic and water meter readings.</p></li>
 <h2><li>Comptia IT Operations Specialist</h2></li>
 <h2><li>Comptia A+</h2></li>
 <h2><li>Comptia Network+</h2></li>
+  <h2><li>Microsoft Administrator</h2></li>
 <h2><li>AWS Cloud Practitioner</h2></li>
 <h2><li>Fortinet Fundamentals in Cybersecurity</h2></li>
 <h2><li>Diploma in Computer Networking</h2></li>
@@ -79,4 +80,5 @@ best practices</p>
 <h2><li>Mr Thulasizwe Tofa-Eastern Cape Treasury Department</h2></li>
 <h2><li>IT Technician</h2></li>
 <h2><li>0825929563</h2></li> 
+
  
